# Oxide

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
cargo/oxide/: Cargo.toml
cargo/oxide_core/: Cargo.toml
cargo/oxide_ox_parser/: Cargo.toml
cargo/oxide_widgets/: Cargo.toml
examples/ox/: main.ox
oxide/: lib.rs  oxide.rs  route.rs  settings.rs
oxide/tests/: mod.rs  oxide.rs  settings.rs
oxide_core/: file_parser.rs  lib.rs  model.rs
oxide_ox_parser/: lib.rs  ox_dom.rs  ox_parser.rs
oxide_widgets/: component.rs  lib.rs  ox_properties.rs  ox_tokens.rs  ox_widget.rs
