[package]
name = "oxide"
version = "0.1.0"
authors = ["Maciej Zaręba <mzareba1997@gmail.com>"]
license = 'MIT'
description = ''
keywords = ["gui", "GUI", "user interface", "xaml", "graphics"]
edition = "2018"

[lib]
path = "../../oxide/lib.rs"

#[dependencies]
#oxide_ox_parser = { path = "../../cargo/oxide_ox_parser", default-features = false, optional = true }
#
#[features]
#oxide_ox_parser = ["oxide_ox_parser"]