[package]
name = "oxide_ox_parser"
version = "0.1.0"
authors = ["Maciej Zaręba <mzareba1997@gmail.com>"]
license = 'MIT'
description = ''
keywords = ["gui", "GUI", "user interface", "xaml", "graphics"]
edition = "2018"

[lib]
path = "../../oxide_ox_parser/lib.rs"

[dependencies]
regex           = "1.3.5"
oxide_widgets   = { path="../oxide_widgets" }